Correct contrast LP

--- a/src/styles/ebookv2/base.css
+++ b/src/styles/ebookv2/base.css
@@ -10,9 +10,9 @@
 
 @layer main {
 	:root {
-		--main: #8955ff;
+		--main: hsl(258, 67%, 48%);
 		--secondary: hsl(170.43deg 60% 22.55%);
-		--yellow: #ffb639;
+		--yellow: hsl(38, 100%, 61%);
 		--background: rgb(255, 248, 240);
 		--bg-light: hsl(17 89.74% 92.35%);
 		--white: hsl(230, 100%, 99%);
